Project

General

Profile

Actions

Bug #21764

closed

encoding of warning for depreciated global variables is not set

Bug #21764: encoding of warning for depreciated global variables is not set

Added by nobu (Nobuyoshi Nakada) 10 months ago. Updated 10 months ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:124028]

Description

The aliased name should be encoded properly.

$ ruby -v -e 'def Warning.warn(s) = p(s, s.encoding); alias $分行 $/; $分行 = "\n"'
ruby 4.0.0dev (2025-11-27T12:05:45Z master 68a7edaa81) +PRISM [arm64-darwin25]
"-e:1: warning: '$\xE5\x88\x86\xE8\xA1\x8C' is deprecated\n"
#<Encoding:BINARY (ASCII-8BIT)>
Actions

Also available in: PDF Atom