[Bug #21764] Propagate the encoding of ID to warning